# go-cpp-grpc-service

./: .gitignore
http-server/: Makefile  go.mod  server.env
http-server/cmd/httpserver/: main.go
http-server/config/: server_cfg.yaml
http-server/internal/httpserver/: config.go  httpserver.go
ssl-service/server/: CMakeLists.txt  main.cc
ssl-service/server/errors/: Errors.hpp
ssl-service/server/grpc-impl/: InitSystem.hpp
ssl-service/server/grpc-server/: StartStopServer.hpp
ssl-service/server/proto/: init.proto
ssl-service/server/ssl-structs/: CRLStructs.hpp  CertificateStructs.hpp  KeyStructs.hpp
ssl-service/server/ssl-utils/: CRL.hpp  Certificate.hpp  Key.hpp
ssl-service/server/time-utils/: Time.hpp
